--- a/ProjetoRedes2/app/src/main/res/layout/activity_main.xml
+++ b/ProjetoRedes2/app/src/main/res/layout/activity_main.xml
@@ -13,9 +13,11 @@
         android:layout_height="250dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="30dp"
         app:cardCornerRadius="150dp"
-        android:layout_margin="80dp"
-        android:elevation="15dp">
+        android:elevation="15dp"
+        android:background="@color/white">
 
         <ImageView
             android:id="@+id/imgUser"
