--- a/ProjetoBD/frontEnd/app/src/main/res/values/colors.xml
+++ b/ProjetoBD/frontEnd/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="verdePrincipal">#26C96C</color>
+    <color name="verdeSecundário">#1D9F55</color>
+
 </resources>
